@@ -3,6 +3,7 @@
         <meta http_equiv="Refresh" content="0; url=http://www.incorrect.com">
         <meta http-equiv="Rfresh" content="0; url=http://www.also-wrong.com">
         <meta http-equiv="Refresh" content="0; url=http://www.drphil.com/">
+        <META HTTP-EQUIV="REFRESH" CONTENT="0; URL=HTTP://WWW.UPCASE.COM/">
         <TITLE>Testing the links</TITLE>
     </head>
     <body>
